--- a/LineControllerCore/LineControllerCore.csproj
+++ b/LineControllerCore/LineControllerCore.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-    <Folder Include="Service\" />
+    <ProjectReference Include="..\LineControllerInfrastructure\LineControllerInfrastructure.csproj" />
   </ItemGroup>
 
 </Project>
