--- a/LineControllerCore/LineControllerCore.csproj
+++ b/LineControllerCore/LineControllerCore.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="System.DirectoryServices.AccountManagement" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LineControllerInfrastructure\LineControllerInfrastructure.csproj" />
   </ItemGroup>
 
